workspace size and full space size

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,11 @@ li a:hover {
   color: #fff;
   padding: 5px;
 }
+#left img {
+  display: block;
+  margin: 0;
+  width: 100%;
+}
 
 .workspace {
   display: flex;
@@ -134,13 +139,14 @@ li a:hover {
 
 #right {
   background-color: lightslategray;
-  width: 280px;
+  width: 560px;
   min-height: 500px;
   height: fit-content;
 }
 #right img {
   display: block;
   margin: 0;
+  width: 560px;
 }
 #right p {
   color: #fff;
@@ -152,7 +158,8 @@ li a:hover {
 
 .list {
   background: red;
-  height: 80px;
+  width: 280px;
+  height: auto;
   margin: 10px;
   color: #fff;
   display: flex;
