--- a/css/styles.css
+++ b/css/styles.css
@@ -181,4 +181,19 @@ li a:hover {
 }
 #saveAsBtn:hover {
   background-color: deepskyblue;
+}
+
+#clearAllBtn {
+  margin: 10px;
+  padding: 10px 20px;
+  height: 50px;
+  background-color: rgb(238, 24, 13);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+}
+#clearAllBtn:hover {
+  background-color: rgb(154, 23, 8);
 }/*# sourceMappingURL=styles.css.map */
