--- a/sass/_workspace.scss
+++ b/sass/_workspace.scss
@@ -91,5 +91,18 @@
     }
 }
 
-
+#clearAllBtn {
+    margin: 10px;
+    padding: 10px 20px;
+    height: 50px;
+    background-color: rgb(238, 24, 13);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    &:hover {
+        background-color: rgb(154, 23, 8);
+    }
+}
 
